Se agregan estrutura para pantallas de post y login

--- a/app/app.html
+++ b/app/app.html
@@ -2,6 +2,10 @@
   <nav>
     <a [router-link]="['/home']">Home</a>
     <a [router-link]="['/about']">About</a>
+    <a [router-link]="['/post']">Post</a>
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" [router-link]="['/login']">
+      Login
+</button>
   </nav>
 
   <router-outlet></router-outlet>
