--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link rel="stylesheet" href="material.css">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -50,6 +51,7 @@
   <!-- endinject -->
 
   <script src="/init.js?v=<%= VERSION %>"></script>
+  <!-- Simple Textfield -->
 
 </body>
 </html>
