Se agrega js de material design

--- a/app/index.html
+++ b/app/index.html
@@ -44,14 +44,13 @@
   </style>
 </head>
 <body>
-
   <app>Loading...</app>
-
   <!-- inject:js -->
   <!-- endinject -->
-
   <script src="/init.js?v=<%= VERSION %>"></script>
-  <!-- Simple Textfield -->
 
+  <script src="material.min.js"></script>
+
+  <!-- Simple Textfield -->
 </body>
 </html>
