menu lateral https://app.asana.com/0/42678605141996/42678605142050 preliminar

--- a/app/app.html
+++ b/app/app.html
@@ -34,10 +34,9 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Brains' Blog</span>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
+        <a class="mdl-navigation__link" href="">Home</a>
+        <a class="mdl-navigation__link" href="">Brainstorming Team</a>
+        <a class="mdl-navigation__link" href="">About</a>
       </nav>
     </div>
     <main class="mdl-layout__content">
